--- a/sass/blocks/_scene.scss
+++ b/sass/blocks/_scene.scss
@@ -103,19 +103,13 @@
         }
     }
 
-    .game__quote {
-        & {
-            @include typewrite;
-            display: block;
-        }
-    }
-
     .game__truck {
         
         &.--guep {
+            
             &:after {
-                background-image: url('../../assets/img/hand-cpf-guep.png');   
-                bottom: 3.8vh;         
+                bottom: 2.8vh;
+                background-image: url('../../assets/img/hand-check-phone.png');
             }
         }
 
@@ -128,7 +122,7 @@
             background-size: cover;
             bottom: 4.8vh;
             left: 9vw;
-            animation: interation 5s ease-in;
+            animation: interation 3s ease-in;
             animation-fill-mode: forwards;
             
             @keyframes interation {
@@ -148,26 +142,62 @@
 }
 
 .game__scenario.--step2 {
-    
-    .game__scene,
-    .game__mountains {
-        left: -1000px;
+
+    .game__quote {
+        & {
+            @include typewrite;
+            display: block;
+        }
     }
 
     .game__truck {
+        & {
+            left: 36vw;
+        }
 
         &:after {
             content: '';
+            display: block;
+            position: absolute;
+            background-image: url('../../assets/img/hand-cpf.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+            bottom: 4.8vh;
+            left: 9vw;
             width: 5vw;
             height: 8vw;
-            display: block;
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-size: cover;
-            position: absolute;
-            bottom: 2vh;
-            left: 9vw;
-            animation: interation 5s ease-in;
+        }
+
+        &.--guep {
+            & {
+                left: 62vw;
+            }
+
+            &:after {
+                content: '';
+                display: block;
+                position: absolute;
+                bottom: 2.8vh;
+                background-image: url('../../assets/img/phone.png');
+                background-repeat: no-repeat;
+                background-size: cover;
+                left: 9vw;
+                animation: interation 3s ease-in;
+                animation-fill-mode: forwards;
+                
+                @keyframes interation {
+                    
+                    from {
+                        width: 0;
+                        height: 0;
+                    }
+                    
+                    to {
+                        width: 5vw;
+                        height: 8vw;
+                    }
+                }
+            }
         }
     }
 } 
@@ -176,7 +206,7 @@
     
     .game__scene,
     .game__mountains {
-        left: -1500px;
+        left: -2500px;
     }    
 }
 
