--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,28 +259,23 @@ p {
   transition: 5s left;
 }
 
-/* line 57, ../../sass/blocks/_scene.scss */
-.game__quote {
-  display: none;
-}
-
-/* line 67, ../../sass/blocks/_scene.scss */
+/* line 62, ../../sass/blocks/_scene.scss */
 .game__scenario.--start .game__truck {
   left: 6vw;
   z-index: 1;
 }
-/* line 73, ../../sass/blocks/_scene.scss */
+/* line 68, ../../sass/blocks/_scene.scss */
 .game__scenario.--start .game__truck.--guep {
   left: 2vw;
 }
 
-/* line 80, ../../sass/blocks/_scene.scss */
+/* line 75, ../../sass/blocks/_scene.scss */
 .game__scenario.--end .game__truck {
   left: 112vw;
   z-index: 1;
 }
 
-/* line 90, ../../sass/blocks/_scene.scss */
+/* line 85, ../../sass/blocks/_scene.scss */
 .game__scenario.--start .game__typewriter {
   position: absolute;
   top: 5vw;
@@ -291,20 +286,20 @@ p {
   padding: 0 19vw;
 }
 
-/* line 104, ../../sass/blocks/_scene.scss */
+/* line 99, ../../sass/blocks/_scene.scss */
 .game__scenario.--step1 .game__truck {
   left: 36vw;
 }
-/* line 107, ../../sass/blocks/_scene.scss */
+/* line 102, ../../sass/blocks/_scene.scss */
 .game__scenario.--step1 .game__truck.--guep {
   left: 22vw;
 }
-/* line 116, ../../sass/blocks/_scene.scss */
+/* line 111, ../../sass/blocks/_scene.scss */
 .game__scenario.--step1 .game__truck.--guep:after {
   bottom: 2.8vh;
   background-image: url("../../assets/img/hand-check-phone.png");
 }
-/* line 122, ../../sass/blocks/_scene.scss */
+/* line 117, ../../sass/blocks/_scene.scss */
 .game__scenario.--step1 .game__truck:after {
   content: '';
   display: block;
@@ -327,7 +322,7 @@ p {
     height: 8vw;
   }
 }
-/* line 153, ../../sass/blocks/_scene.scss */
+/* line 148, ../../sass/blocks/_scene.scss */
 .game__scenario.--step2 .game__quote {
   display: block;
   opacity: 1;
@@ -353,11 +348,11 @@ p {
     width: 100%;
   }
 }
-/* line 162, ../../sass/blocks/_scene.scss */
+/* line 157, ../../sass/blocks/_scene.scss */
 .game__scenario.--step2 .game__truck {
   left: 36vw;
 }
-/* line 166, ../../sass/blocks/_scene.scss */
+/* line 161, ../../sass/blocks/_scene.scss */
 .game__scenario.--step2 .game__truck:after {
   content: '';
   display: block;
@@ -370,11 +365,11 @@ p {
   width: 5vw;
   height: 8vw;
 }
-/* line 180, ../../sass/blocks/_scene.scss */
+/* line 175, ../../sass/blocks/_scene.scss */
 .game__scenario.--step2 .game__truck.--guep {
   left: 62vw;
 }
-/* line 184, ../../sass/blocks/_scene.scss */
+/* line 179, ../../sass/blocks/_scene.scss */
 .game__scenario.--step2 .game__truck.--guep:after {
   content: '';
   display: block;
@@ -397,11 +392,11 @@ p {
     height: 8vw;
   }
 }
-/* line 216, ../../sass/blocks/_scene.scss */
+/* line 211, ../../sass/blocks/_scene.scss */
 .game__scenario.--step3 .game__truck {
   left: 36vw;
 }
-/* line 220, ../../sass/blocks/_scene.scss */
+/* line 215, ../../sass/blocks/_scene.scss */
 .game__scenario.--step3 .game__truck:after {
   content: '';
   display: block;
@@ -414,11 +409,11 @@ p {
   width: 5vw;
   height: 8vw;
 }
-/* line 234, ../../sass/blocks/_scene.scss */
+/* line 229, ../../sass/blocks/_scene.scss */
 .game__scenario.--step3 .game__truck.--guep {
   left: 62vw;
 }
-/* line 238, ../../sass/blocks/_scene.scss */
+/* line 233, ../../sass/blocks/_scene.scss */
 .game__scenario.--step3 .game__truck.--guep:after, .game__scenario.--step3 .game__truck.--guep:before {
   content: '';
   display: block;
@@ -426,7 +421,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
 }
-/* line 247, ../../sass/blocks/_scene.scss */
+/* line 242, ../../sass/blocks/_scene.scss */
 .game__scenario.--step3 .game__truck.--guep:after {
   left: 8vw;
   width: 5vw;
@@ -435,7 +430,7 @@ p {
   left: 9vw;
   background-image: url("../../assets/img/phone.png");
 }
-/* line 256, ../../sass/blocks/_scene.scss */
+/* line 251, ../../sass/blocks/_scene.scss */
 .game__scenario.--step3 .game__truck.--guep:before {
   width: 4vw;
   height: 12vh;
@@ -444,15 +439,15 @@ p {
   background-image: url("../../assets/img/cte.png");
 }
 
-/* line 270, ../../sass/blocks/_scene.scss */
+/* line 265, ../../sass/blocks/_scene.scss */
 .game__scenario.--step4 .game__truck {
   left: 36vw;
 }
-/* line 275, ../../sass/blocks/_scene.scss */
+/* line 270, ../../sass/blocks/_scene.scss */
 .game__scenario.--step4 .game__truck.--guep {
   left: 62vw;
 }
-/* line 279, ../../sass/blocks/_scene.scss */
+/* line 274, ../../sass/blocks/_scene.scss */
 .game__scenario.--step4 .game__truck.--guep:after, .game__scenario.--step4 .game__truck.--guep:before {
   content: '';
   display: block;
@@ -460,7 +455,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
 }
-/* line 288, ../../sass/blocks/_scene.scss */
+/* line 283, ../../sass/blocks/_scene.scss */
 .game__scenario.--step4 .game__truck.--guep:after {
   left: 8vw;
   width: 5vw;
@@ -470,31 +465,31 @@ p {
   background-image: url("../../assets/img/hand-check-phone.png");
 }
 
-/* line 302, ../../sass/blocks/_scene.scss */
+/* line 297, ../../sass/blocks/_scene.scss */
 .game__scenario.--step5 .game__scene,
 .game__scenario.--step5 .game__mountains {
   left: -2500px;
 }
 
-/* line 311, ../../sass/blocks/_scene.scss */
+/* line 306, ../../sass/blocks/_scene.scss */
 .game__scenario.--step6 .game__scene,
 .game__scenario.--step6 .game__mountains {
   left: -2500px;
 }
 
-/* line 319, ../../sass/blocks/_scene.scss */
+/* line 314, ../../sass/blocks/_scene.scss */
 .game__scenario.--step7 .game__scene,
 .game__scenario.--step7 .game__mountains {
   left: -3000px;
 }
 
-/* line 327, ../../sass/blocks/_scene.scss */
+/* line 322, ../../sass/blocks/_scene.scss */
 .game__scenario.--step8 .game__scene,
 .game__scenario.--step8 .game__mountains {
   left: -3500px;
 }
 
-/* line 335, ../../sass/blocks/_scene.scss */
+/* line 330, ../../sass/blocks/_scene.scss */
 .game__scenario.--step9 .game__scene,
 .game__scenario.--step9 .game__mountains {
   left: -4000px;
@@ -507,36 +502,42 @@ p {
   align-items: center;
   width: 100vw;
   height: 100vh;
+  opacity: 1;
+  transition: 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-/* line 14, ../../sass/blocks/_intro.scss */
+/* line 17, ../../sass/blocks/_intro.scss */
 .intro.-is-disabled {
-  display: none;
+  height: 0;
+  width: 0;
+  transition: 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  opacity: 0;
 }
 
-/* line 20, ../../sass/blocks/_intro.scss */
+/* line 27, ../../sass/blocks/_intro.scss */
 .intro__list {
   text-align: center;
 }
 
-/* line 26, ../../sass/blocks/_intro.scss */
+/* line 33, ../../sass/blocks/_intro.scss */
 .intro__logo {
-  max-width: 120px;
-  margin-bottom: 100px;
+  max-width: 10vw;
+  height: auto;
+  margin-bottom: 5vw;
 }
 
 /* line 7, ../../sass/mixins/_buttons.scss */
 .intro__start {
   width: 100%;
-  max-width: 200px;
-  line-height: 60px;
+  max-width: 20vw;
+  line-height: 10vh;
   background-color: transparent;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 1.2vw;
   font-weight: 400;
   text-transform: uppercase;
   font-family: 'Roboto', sans-serif;
   transition: 0.2s cubic-bezier(0.55, 0.06, 0.68, 0.19);
-  margin-bottom: 20px;
+  margin-bottom: 1vw;
 }
 /* line 20, ../../sass/mixins/_buttons.scss */
 .intro__start.--yellow {
