--- a/sass/blocks/_intro.scss
+++ b/sass/blocks/_intro.scss
@@ -9,10 +9,17 @@
        align-items: center;
        width: 100vw;
        height: 100vh;
+       opacity: 1;
+       transition: 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
     }
 
     &.-is-disabled {
-        display: none;
+        height: 0;
+        width: 0;
+        transition: 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        opacity: 0;
+        
     }
 }
 
@@ -24,8 +31,9 @@
 
 .intro__logo {
     & {
-        max-width: 120px;
-        margin-bottom: 100px;
+        max-width: 10vw;
+        height: auto;
+        margin-bottom: 5vw;
     }
 }
 
