--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,3 +1,7 @@
+//-----------
+// Mixins
+//-----------
+
 @import 'mixins/_mquerys';
 @import 'mixins/_buttons';
-@import 'mixins/_typewrite';
+@import 'mixins/_typewriter';
